--- a/jenkinsfile
+++ b/jenkinsfile
@@ -7,6 +7,11 @@ pipeline {
                 echo 'Hello World'
             }
         }
+ stage('bye') {
+            steps {
+                echo 'good bye'
+            }
+        }
     }
 }
 
