--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,17 +1,26 @@
 pipeline {
-    agent any
-
-    stages {
-        stage('Hello') {
-            steps {
-                echo 'Hello World'
-            }
-        }
- stage('bye') {
-            steps {
-                echo 'good bye'
-            }
-        }
+  environment {
+    repo = "bharatbhurtel/pipelinedemo"
+  }
+  agent any
+  stages {
+    stage('Docker Build') {
+      steps {
+        sh 'docker build -t $repo:v$BUILD_NUMBER .'
+      }
     }
+    stage('Docker Push') {
+      steps {
+        withCredentials([usernamePassword(credentialsId: 'dockerhub-id', usernameVariable: 'User', passwordVariable: 'Password')]) {
+          sh "docker login -u ${env.User} -p ${env.Password}"
+          sh 'docker push $repo:v$BUILD_NUMBER'
+        }
+      }
+    }
+    stage('Clean docker image') {
+      steps {
+        sh 'docker rmi $repo:v$BUILD_NUMBER'
+      }
+    }
+  }
 }
-
